--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -247,7 +247,7 @@ jobs:
 
       - name: Release ${{ matrix.board }}
         id: release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@2d72d869af3bf23602f9593a1e3fd739b80ac1eb # which is v0.1.12, concat release bodies. # @v1 is a moving target
         if: startsWith(github.ref, 'refs/tags/') # only for tags. GitHub requires tags for releases.
         with:
           body_path: build/output/release.md # created by prepare_release.sh
